%% ERD em Mermaid
erDiagram
    USUARIO ||--o| ALUNO : "é"
    USUARIO ||--o| PROFESSOR : "é"
    CURSO ||--o{ CURSO_DISCIPLINA : "tem"
    DISCIPLINA ||--o{ CURSO_DISCIPLINA : "compõe"
    DISCIPLINA ||--o{ OFERTA_DISCIPLINA : "é_ofertada_em"
    PROFESSOR ||--o{ OFERTA_DISCIPLINA : "leciona"
    PERIODO_MATRICULA ||--o{ OFERTA_DISCIPLINA : "inclui"
    ALUNO ||--o{ MATRICULA : "faz"
    OFERTA_DISCIPLINA ||--o{ MATRICULA : "possui"
